# Arm-Pi-Tweaker

./: .gitignore  CMakeLists.txt  Cargo.toml  GameScope Install  README.md  arm-pi-tweaker.pro  build.rs  build.sh  build_arm64.sh  build_qmake.sh  change_log.txt  clean.sh  download_drivers.sh  download_drivers_real.sh  downloadlinks.md  gpumanager.cpp  gpumanager.h  imagebuilder.cpp  imagebuilder.h  install_arm64_deps.sh  kernelmanager.cpp  kernelmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  storagemanager.cpp  storagemanager.h  systemmanager.cpp  systemmanager.h
.cargo/: config.toml
gamescope/: gamescope_3.11.49-1_arm64.deb
gpu/docs/: DRIVER_MATRIX.md  README.md
kernel/devicetree/: README.md  generate_dts_files.sh  generate_special_dts.sh  rk3588-orangepi-5-plus.dts  rk3588s-orangepi-5-plus-debian-11-6.10-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.10-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.10-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.10-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.10-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.10-valhall-g610-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.11-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.11-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.11-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.11-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.11-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.11-valhall-g610-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.12-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.12-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.12-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.12-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.12-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.12-valhall-g610-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.13-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.13-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.13-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.13-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.13-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.13-valhall-g610-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.14-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.14-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.14-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.14-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.14-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.14-valhall-g610-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-bifrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-gamescope.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-kodi.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-mesa-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-panfrost-desktop.dts  rk3588s-orangepi-5-plus-debian-11-6.15.4-valhall-g610-desktop.dts  (+261 more)
lcce/: Cargo.toml  Cargo_full.toml  build.rs
lcce/src/: config.rs  main.rs  simple_test.rs  system.rs
lcce/ui/: main.slint  simple.slint
models/: README.md
src/: devicetree.rs  error.rs  lib.rs  main.rs  realtime_writer.rs
src/armpi_tweaker/: cpu_scheduler.rs  gpu_drivers.rs  hardware_acceleration.rs  localization.rs  mod.rs  mpp_tweaks.rs  network_configuration.rs  security_config.rs  software_installation.rs  storage_management.rs  system_info.rs  system_management.rs
src/bootloader/: mod.rs  uboot.rs
ui/: gamescope_wizard.slint
widgets/: backupwizard.cpp  backupwizard.h  customimagewizard.cpp  customimagewizard.h  rockytab.cpp  rockytab.h  uefitab.cpp  uefitab.h  upgradewidget.cpp  upgradewidget.h  welcometab.cpp  welcometab.h
(+24 files in other folders)
