[package]
name = "builder"
version = "0.1.0"
edition = "2021"
authors = ["Setec Labs"]
description = "Setec Labs Orange Pi 5 Plus Builder - Cross-platform tool for building custom distros, flashing SPI, and burning images"
license = "MIT"
readme = "README.md"
build = "build.rs"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
crossterm = "0.27"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
directories = "5.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
fastrand = "2.0"
num_cpus = "1.0"
cargo-deb = "2.0"
slint = "1.3"

[build-dependencies]
slint-build = "1.3"

# For future hardware interface support
# spidev = "0.6"
# serialport = "4.3"
# i2cdev = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies will go here

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies will go here

[profile.dev]
# Faster debug builds
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Fast build profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
debug-assertions = true
